front page wrap margin fix

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -3764,7 +3764,7 @@ nav {
 	}
 
 	.home & {
-		margin-top: 240px;
+		margin-top: 40px;
 		margin-bottom: 40px;
 
 		@media screen and (max-width: 992px) {
